{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 31,
  "lineage": "12010f0b-fb3a-0ea5-876c-99f2af2064d8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668827167344:security-group/sg-0bd53c6ffe9b98d04",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0bd53c6ffe9b98d04",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0408bf7effb871ee3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668827167344:vpc/vpc-0408bf7effb871ee3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0856d810fd3a95718",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ffcc5ba734c98069",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0408bf7effb871ee3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05c04467efdadbc11",
            "owner_id": "668827167344"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668827167344:security-group/sg-0da63169e9612ed52",
            "description": "Allow access from service two",
            "egress": [],
            "id": "sg-0da63169e9612ed52",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Open Traffic HTTP",
            "name_prefix": "",
            "owner_id": "668827167344",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0408bf7effb871ee3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668827167344:security-group/sg-0a15885ed44fd8f92",
            "description": "Allow access from service one",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a15885ed44fd8f92",
            "ingress": [],
            "name": "Open Traffic HTTPS",
            "name_prefix": "",
            "owner_id": "668827167344",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0408bf7effb871ee3"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}